news-parser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-parser-deployment
  labels:
    app: parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parser
  template:
    metadata:
      labels:
        app: parser
    spec:
      containers:
      - name: news-parser
        image: waheeb96/news-parser:latest
        ports:
         - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: news-parser-service
  labels:
    app: parser
spec:
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
  selector:
    app: parser
